--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: Soy estudiante de Ciencia de Datos en el ITAM. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
+#social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
