--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm Frida Márquez
+title: Hola! Soy Frida Márquez
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -14,9 +14,9 @@ author-img: frida_m.jpg # add your photo
 about-author: Soy estudiante de Ciencia de Datos en el ITAM. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-#social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-github: fridamarquezg # add your Github handle
+social-linkedin: # add your Linkedin handle
+social-email: frida@marquez.io # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
