--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title: Hola! Soy Frida Márquez
+title: Frida Márquez
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://fridamarquezg.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Frida Márquez # add your name
 author-img: frida_m.jpg # add your photo
-about-author: Soy estudiante de Ciencia de Datos en el ITAM. # add description
+about-author: Hola! Me llamo Frida y soy estudiante de Ciencia de Datos en el ITAM. Me gusta bailar, comer y aprender cosas nuevas :D # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: fridamarquezg # add your Github handle
